# open_vins

./: CMakeLists.txt  ReadMe.md  features.activity.violet.html  hello world.xmind  log  rs_solution.md  run_serial_msckf.xmind
ov_core/: CMakeLists.txt
ov_core/src/feat/: FeatureDatabase.h  FeatureInitializer.cpp  FeatureInitializerOptions.h
ov_core/src/init/: InertialInitializer.cpp
ov_core/src/track/: TrackBase.cpp  TrackBase.h  TrackKLT.cpp  TrackKLT.h
ov_core/src/types/: JPLQuat.h
ov_core/src/utils/: dataset_reader.h
ov_msckf/: CMakeLists.txt
ov_msckf/launch/: display.rviz  statistics.perspective  tutorial.launch  tutorial_gs_mono.launch  tutorial_rs.launch  tutorial_rs_mono.launch
ov_msckf/src/: run_serial_msckf.cpp
ov_msckf/src/core/: RosVisualizer.cpp  RosVisualizer.h  VioManager.cpp  VioManager.h  camera_model_utils.cpp  camera_model_utils.h  rs_imp.cpp  rs_imp.h  rs_info.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateOptions.h
ov_msckf/src/update/: UpdaterHelper.cpp  UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterOptions.h  UpdaterSLAM.cpp
ov_msckf/src/utils/: tic_toc.h
